public/css/resume.css
.resume {width: 850px;}

body {
  min-width: 1000px;
  padding: 0; margin: 0;
}



.resume {font-family: "Average", "Georgia", serif;}

ul, ol, li {list-style-type: none;}
h1,h2,h3,h4,h5,h6 {font-weight: normal;}

body {background-color: #f5f5f5; color: #151515;}
a {color: rgb(0, 53, 102);}



.resume {font-size: 12pt; line-height: 25px;}
.resume h1 {font-size: 20pt; line-height: 40px;}
.resume h2 {font-size: 16pt; line-height: 32px;}
.resume h3 {font-size: 16pt; line-height: 33px;}
.resume h4 {font-size: 12pt; xfont-weight: bold;}
.resume ul li {font-size: 12pt;}
.resume .summary {font-size: 14pt; line-height: 30px;}

/** Main structure **/

header.main, footer.main {display: none;}
div.main {margin-top: 20px;}

.resume p {margin: 5px 0 10px 0;}

article pre {
  white-space: pre-wrap;
  font-family: inherit;
}


.resume {margin: 0 auto;}
.resume ul li {width: 390px;}
.resume .before ul li,
.resume .personal ul li {width: 815px;}
.resume td {width: 425px;}
.resume td.right {padding-left: 20px;}

.resume section h2 .date,
.resume section h3 .date {
  color: #888; display: inline-block; margin-left: 10px;
  font-size: 90%;
}

.resume ol, .resume ul {
  list-style-position: outside;
}

.resume ol li, .resume ul li {margin-top: 10px; margin-bottom: 15px;}
.resume ul, .resume ul li {list-style-type: none;}
.resume ol, .resume ol li {list-style-type: decimal;}

.resume ul {margin-top: 10px;}
.resume ul li {line-height: 19px; padding-left: 10px;}

/** section-specific **/

.resume .contact {position: relative;}

.resume .contact ul {
  margin-top: 0; margin-left: 20px;
  display: inline-block;
  position: absolute; right: 15px; top: 7px;
}
.resume .contact h1 {display: inline-block;}
.resume .contact ul li {
  display: inline-block;
  margin: 0 20px 0 0;
  padding: 0;
  width: auto;
  font-size: 12pt;
}

.resume .sunlight ul {margin-top: 0px;}
.resume .sunlight ul li {line-height: 25px;}

.summary {padding: 20px 0;}

.eighteen-f {margin-top: 35px;}
.sunlight {margin-top: 35px;}
.sunlight, .work {margin-bottom: 25px;}
.before {margin-bottom: 35px;}
.sunlight table td {padding-bottom: 10px;}

.thoughtbot p {padding-right: 20px;}
.thoughtbot p, .bsd p {line-height: 25px;}
.resume .bsd ul,
.resume .bsd ul li,
.resume .thoughtbot ul,
.resume .thoughtbot ul li {xlist-style-type: disc; }

